# broski

./: .gitignore  README.md  example.env  pyproject.toml  result.md  result.txt
src/project_broski/: crew.py  main.py
src/project_broski/config/: agents.yaml  tasks.yaml
src/project_scoper/: main.py
